--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
-            margin: 40px 0;
+            margin: 40px auto; /* Fix: Changed from 40px 0 to 40px auto for centering */
         }
 
         .stat-box {
@@ -523,7 +523,7 @@
             display: flex;
             flex-wrap: wrap;
             align-items: center;
-            margin: 40px 0;
+            margin: 40px auto; /* Fix: Changed from 40px 0 to 40px auto for centering */
             border: 2px solid var(--black);
         }
 
