--- a/index.html
+++ b/index.html
@@ -814,9 +814,8 @@
     <footer>
         <div class="container">
             <div class="social-icons">
-                <a href="https://instagram.com/fabian_ritter84" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://x.com/FabianRitter13" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://youtube.com/@fabianritter84" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/florian.merzenich_official/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@FlorianMerzenich" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
             
             <div class="logo-footer">
