--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
         /* THEME: BLAU (Nur Hintergrund-Tönung) */
         body.theme-blue {
-            --overlay-color: rgba(59, 130, 246, 0.4); /* Blauer Schimmer */
+            /* Intensives Blau mit höherer Deckkraft gegen den braunen Hintergrund */
+            --overlay-color: rgba(0, 40, 255, 0.85); 
         }
 
         /* THEME: ROT (Nur Hintergrund-Tönung) */
