--- a/index.html
+++ b/index.html
@@ -133,15 +133,16 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
-            /* Padding reduziert (war 20px / 60px) */
-            padding-top: 10px;
-            padding-bottom: 40px; 
+            /* Padding weiter reduziert */
+            padding-top: 5px; 
+            padding-bottom: 30px; 
         }
 
         .logo {
             width: 60px;
             height: auto;
-            margin-bottom: 15px;
+            /* Margin reduziert */
+            margin-bottom: 5px;
         }
 
         .sub-headline {
@@ -154,7 +155,8 @@
             /* Farbe auf Weiß geändert */
             color: var(--text-white); 
             
-            margin-bottom: 20px;
+            /* Margin reduziert */
+            margin-bottom: 10px;
             border: 2px solid var(--text-white);
             padding: 5px 12px;
             display: inline-block;
@@ -171,7 +173,7 @@
             font-weight: 800;
             line-height: 1.2;
             /* Margin reduziert */
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .main-headline span {
@@ -185,7 +187,8 @@
             width: 100%;
             display: flex;
             justify-content: center;
-            margin-bottom: 25px;
+            /* Margin reduziert */
+            margin-bottom: 15px;
             position: relative;
         }
 
