--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
         <!-- HERO SECTION -->
         <header class="hero-section">
             <!-- Logo -->
-            <img src="xlg.jpg" alt="Logo" class="logo">
+            <img src="logo_weiß.png" alt="Logo" class="logo">
 
             <!-- Text Content -->
             <h2 class="sub-headline">12 Jahre Crypto-Erfahrung zusammengefasst in 60 Min.</h2>
@@ -854,7 +854,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <img src="xlg.jpg" alt="Logo" class="footer-logo">
+            <img src="logo_weiß.png" alt="Logo" class="footer-logo">
 
             <div class="social-icons">
                 <a href="https://instagram.com/fabian_ritter84" target="_blank"><i class="fa-brands fa-instagram"></i></a>
