--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         }
 
         .logo {
-            width: 60px;
+            /* Logo vergrößert (von 60px auf 100px) */
+            width: 100px;
             height: auto;
             /* Margin reduziert */
             margin-bottom: 5px;
