--- a/index.html
+++ b/index.html
@@ -648,6 +648,71 @@
             text-decoration: none;
         }
 
+        /* -----------------------------------------------------------
+           PROVEN EXPERT WIDGET
+        ----------------------------------------------------------- */
+        .proven-expert-badge {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #ffffff;
+            width: 140px;
+            padding: 10px;
+            border-radius: 4px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            z-index: 9999;
+            text-align: center;
+            font-family: 'Poppins', sans-serif;
+            border-top: 3px solid #f6ad55; /* Orange accent line */
+            transition: transform 0.3s ease;
+            cursor: default;
+        }
+
+        .proven-expert-badge:hover {
+            transform: translateY(-3px);
+        }
+
+        .pe-logo {
+            font-weight: 700;
+            font-size: 13px;
+            color: #2d3748;
+            margin-bottom: 5px;
+            line-height: 1;
+        }
+
+        .pe-logo span {
+            color: #f6ad55;
+        }
+
+        .pe-stars {
+            color: #fbbf24; /* Amber-400 for stars */
+            font-size: 12px;
+            margin-bottom: 5px;
+            letter-spacing: 1px;
+        }
+
+        .pe-rating {
+            font-weight: 800;
+            font-size: 20px;
+            color: #2d3748;
+            line-height: 1;
+            margin-bottom: 2px;
+        }
+
+        .pe-subtext {
+            font-size: 10px;
+            color: #718096;
+            line-height: 1.3;
+        }
+
+        .pe-date {
+            font-size: 9px;
+            color: #a0aec0;
+            margin-top: 5px;
+            border-top: 1px solid #edf2f7;
+            padding-top: 5px;
+        }
+
     </style>
 </head>
 <body>
@@ -660,6 +725,18 @@
     <!-- Hintergrund Overlay & Tint -->
     <div class="bg-fixed"></div>
     <div class="bg-tint"></div>
+
+    <!-- PROVEN EXPERT WIDGET (Fixed Bottom Right) -->
+    <div class="proven-expert-badge">
+        <div class="pe-logo">Proven<span>Expert</span></div>
+        <div class="pe-rating">5.00</div>
+        <div class="pe-stars">
+            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+        </div>
+        <div class="pe-subtext">SEHR GUT</div>
+        <div class="pe-subtext">50 Bewertungen</div>
+        <div class="pe-date" id="pe-date-display">Stand: ...</div>
+    </div>
 
     <main class="container">
         
@@ -896,7 +973,22 @@
             }, 1000);
         })();
 
-        // 2. THEME SWITCHER
+        // 2. SET CURRENT DATE FOR PROVEN EXPERT
+        (function() {
+            const dateElement = document.getElementById('pe-date-display');
+            if (dateElement) {
+                const today = new Date();
+                // Format: DD.MM.YYYY
+                const dateString = today.toLocaleDateString('de-DE', {
+                    day: '2-digit',
+                    month: '2-digit',
+                    year: 'numeric'
+                });
+                dateElement.textContent = `Stand: ${dateString}`;
+            }
+        })();
+
+        // 3. THEME SWITCHER
         (function() {
             const body = document.body;
             const toggleBtn = document.getElementById('theme-toggle');
