--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
         }
 
         .logo {
-            /* Logo vergrößert (von 60px auf 100px) */
-            width: 100px;
+            /* Logo nochmals vergrößert (auf 240px) */
+            width: 240px;
             height: auto;
-            /* Margin reduziert */
-            margin-bottom: 5px;
+            /* Margin leicht angepasst */
+            margin-bottom: 15px;
         }
 
         .sub-headline {
