--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             width: 100%;
             height: 100%;
             z-index: -2;
+            /* Hintergrundbild wiederhergestellt */
             background: url('https://storage.googleapis.com/msgsndr/H1mibqsfrrRD9o3Cjg0N/media/692493104580ec493c7ca068.jpg') center center / cover no-repeat;
             opacity: 0.85; 
         }
@@ -217,6 +218,8 @@
             z-index: 20; 
             object-fit: cover;
             border-radius: 3px;
+            /* NEU: Schwarzer Hintergrund verhindert das Aufblitzen des alten Bildes beim Laden */
+            background-color: #000000; 
         }
 
         /* -----------------------------------------------------------
@@ -748,7 +751,7 @@
             <!-- Text Content -->
             <h2 class="sub-headline">12 Jahre Crypto-Erfahrung zusammengefasst in 60 Min.</h2>
             <h1 class="main-headline">
-                60 Minuten Netflix oder<br>
+                <span style="display: inline; text-decoration: line-through; text-decoration-color: #ef4444; text-decoration-thickness: 3px; opacity: 0.9;">60 Minuten Netflix</span> oder<br>
                 <span style="color: var(--primary-color); transition: color 0.5s ease;">60 Minuten für immer in seine Zukunft investieren</span>
             </h1>
 
@@ -908,7 +911,7 @@
                 <p class="scarcity-text">
                     Ich arbeite persönlich mit meinen Klienten. Mein Tag hat auch nur 24 Stunden.
                     <br><br>
-                    <strong style="color: white;">Bitte klicke nur auf den Button, wenn du über mind. 10.000 € freies Investitionskapital verfügst und bereit bist, Verantwortung zu übernehmen.</strong>
+                    <strong style="color: white;">Bitte klicke nur auf den Button, wenn du über mind. 3.000 € freies Investitionskapital verfügst und bereit bist, Verantwortung zu übernehmen.</strong>
                 </p>
             </div>
         </section>
@@ -916,7 +919,7 @@
         <!-- PROFILE SECTION -->
         <section>
             <div class="profile-container">
-                <img src="portrait.jpg" alt="Florian Merzenich" class="profile-img">
+                <img src="profilbild.png" alt="Florian Merzenich" class="profile-img">
                 <div class="profile-text">
                     <h3 class="sub-headline" style="border:none; padding:0; margin-bottom:5px; color:var(--text-gray);">Das ist</h3>
                     <h2 class="section-title white" style="text-align: left; margin-bottom: 20px; font-size: 36px;">Florian Merzenich</h2>
