--- a/index.html
+++ b/index.html
@@ -211,10 +211,11 @@
         .laptop-screen {
             position: absolute;
             /* Werte angepasst, um das Originalbild besser zu verdecken */
-            top: 5.0%;    
+            /* UPDATE: Noch weiter nach oben geschoben, um Durchscheinen zu verhindern */
+            top: 2.8%;    
             left: 12.0%; 
             width: 76.0%; 
-            height: 85.0%; 
+            height: 89.0%; 
             z-index: 20; 
             object-fit: cover;
             border-radius: 3px;
@@ -995,7 +996,7 @@
         <!-- HERO SECTION -->
         <header class="hero-section">
             <!-- Logo -->
-            <img src="https://placehold.co/240x100/transparent/white?text=LOGO" alt="Logo" class="logo">
+            <img src="logo_weiß.png" alt="Logo" class="logo">
 
             <!-- Text Content -->
             <h2 class="sub-headline">12 Jahre Crypto-Erfahrung zusammengefasst in 60 Min.</h2>
@@ -1010,7 +1011,7 @@
                     <!-- Das Originalbild als Rahmen -->
                     <img src="https://images.leadconnectorhq.com/image/f_webp/q_80/r_1200/u_https://assets.cdn.filesafe.space/H1mibqsfrrRD9o3Cjg0N/media/69249068c61b1199300f921f.png" alt="Laptop Frame" class="laptop-frame">
                     <!-- Das neue Bild als Bildschirm-Inhalt -->
-                    <img src="https://placehold.co/800x600/101010/f6ad55?text=Masterclass+Vorschau" alt="Screen Content" class="laptop-screen">
+                    <img src="hero_bg.JPG" alt="Screen Content" class="laptop-screen">
                 </div>
             </div>
 
@@ -1036,17 +1037,17 @@
             <div class="marquee-container">
                 <div class="marquee-content">
                     <!-- Set 1 -->
-                    <img src="https://placehold.co/150x40/transparent/white?text=FOCUS" class="marquee-logo" alt="Focus">
-                    <img src="https://placehold.co/150x40/transparent/white?text=WirtschaftsWoche" class="marquee-logo invert" alt="WirtschaftsWoche">
-                    <img src="https://placehold.co/150x40/transparent/white?text=n-tv" class="marquee-logo" style="border-radius: 4px;" alt="n-tv">
-                    <img src="https://placehold.co/150x40/transparent/white?text=London+Daily" class="marquee-logo" alt="London Daily News">
+                    <img src="focus.png" class="marquee-logo" alt="Focus">
+                    <img src="wirtschaftswoche.png" class="marquee-logo invert" alt="WirtschaftsWoche">
+                    <img src="ntv.jpg" class="marquee-logo" style="border-radius: 4px;" alt="n-tv">
+                    <img src="london.png" class="marquee-logo" alt="London Daily News">
                     <span class="marquee-text">Business Magazin</span>
 
                     <!-- Set 2 -->
-                    <img src="https://placehold.co/150x40/transparent/white?text=FOCUS" class="marquee-logo" alt="Focus">
-                    <img src="https://placehold.co/150x40/transparent/white?text=WirtschaftsWoche" class="marquee-logo invert" alt="WirtschaftsWoche">
-                    <img src="https://placehold.co/150x40/transparent/white?text=n-tv" class="marquee-logo" style="border-radius: 4px;" alt="n-tv">
-                    <img src="https://placehold.co/150x40/transparent/white?text=London+Daily" class="marquee-logo" alt="London Daily News">
+                    <img src="focus.png" class="marquee-logo" alt="Focus">
+                    <img src="wirtschaftswoche.png" class="marquee-logo invert" alt="WirtschaftsWoche">
+                    <img src="ntv.jpg" class="marquee-logo" style="border-radius: 4px;" alt="n-tv">
+                    <img src="london.png" class="marquee-logo" alt="London Daily News">
                     <span class="marquee-text">Business Magazin</span>
                 </div>
             </div>
@@ -1183,7 +1184,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <img src="https://placehold.co/240x100/transparent/white?text=LOGO" alt="Logo" class="footer-logo">
+            <img src="logo_weiß.png" alt="Logo" class="footer-logo">
 
             <div class="social-icons">
                 <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
