--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kostenlose Bärenmarkt Masterclass – Lerne profitabel zu investieren</title>
     
+    <!-- Favicon -->
+    <link rel="icon" href="xlg.jpg" type="image/jpeg">
+
     <!-- Fonts laden: Montserrat & Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
