--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
             <!-- 1. Florian CEO Highlight (Einzeln oben) -->
             <div class="ceo-highlight">
                 <div class="team-card ceo">
-                    <img src="florian.JPG" alt="Florian Merzenich" class="team-img">
+                    <img src="gitarbeiter/florian.JPG" alt="Florian Merzenich" class="team-img">
                     <h4 class="team-name">Florian Merzenich</h4>
                     <span class="team-role">Founder · Geschäftsführer · CEO</span>
                     <p class="team-desc">
@@ -1310,7 +1310,7 @@
                 
                 <!-- Jonathan (Jonas) -->
                 <div class="team-card">
-                    <img src="jonas.JPG" alt="Jonathan Rosenfeld" class="team-img">
+                    <img src="gitarbeiter/jonas.JPG" alt="Jonathan Rosenfeld" class="team-img">
                     <h4 class="team-name">Jonathan Rosenfeld</h4>
                     <span class="team-role">Head of Education · Blockchain-Trainer</span>
                     <p class="team-desc">
@@ -1326,7 +1326,7 @@
 
                 <!-- Markus -->
                 <div class="team-card">
-                    <img src="markus.JPG" alt="Markus Hoffmann" class="team-img">
+                    <img src="gitarbeiter/markus.JPG" alt="Markus Hoffmann" class="team-img">
                     <h4 class="team-name">Markus Hoffmann</h4>
                     <span class="team-role">Ultimate Mastermind Platinum · CCFE-zertifiziert</span>
                     <p class="team-desc">
@@ -1342,7 +1342,7 @@
 
                 <!-- Alexander (Alex) -->
                 <div class="team-card">
-                    <img src="alex.JPG" alt="Alexander von Berg" class="team-img">
+                    <img src="gitarbeiter/alex.JPG" alt="Alexander von Berg" class="team-img">
                     <h4 class="team-name">Alexander von Berg</h4>
                     <span class="team-role">Blockchain-Trainer (CCFE-zertifiziert)</span>
                     <p class="team-desc">
@@ -1356,7 +1356,7 @@
 
                 <!-- Maximilian (Maxi) -->
                 <div class="team-card">
-                    <img src="maxi.JPG" alt="Maximilian Steger" class="team-img">
+                    <img src="gitarbeiter/maxi.JPG" alt="Maximilian Steger" class="team-img">
                     <h4 class="team-name">Maximilian Steger</h4>
                     <span class="team-role">Blockchain-Trainer</span>
                     <p class="team-desc">
@@ -1370,7 +1370,7 @@
 
                 <!-- Leonie -->
                 <div class="team-card">
-                    <img src="leonie.JPG" alt="Leonie Falkner" class="team-img">
+                    <img src="gitarbeiter/leonie.JPG" alt="Leonie Falkner" class="team-img">
                     <h4 class="team-name">Leonie Falkner</h4>
                     <span class="team-role">Marketing & Content Managerin</span>
                     <p class="team-desc">
@@ -1384,7 +1384,7 @@
 
                 <!-- Anja (Anna) -->
                 <div class="team-card">
-                    <img src="anna.JPG" alt="Anja Dautzenberg" class="team-img">
+                    <img src="gitarbeiter/anna.JPG" alt="Anja Dautzenberg" class="team-img">
                     <h4 class="team-name">Anja Dautzenberg</h4>
                     <span class="team-role">Organisation & Backoffice</span>
                     <p class="team-desc">
