--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,23 @@
                         </p>
                     </div>
 
-                    <!-- 7. Florian (CEO) - Verschoben ans Ende -->
+                    <!-- 7. Kevin -->
+                    <div class="team-card">
+                        <img src="gitarbeiter/kevin.jpeg" alt="Kevin Feist" class="team-img">
+                        <h4 class="team-name">Kevin Feist</h4>
+                        <span class="team-role" style="font-size: 11px;">Blockchain-Experte & Strategic Client Advisor</span>
+                        <p class="team-desc">
+                            Kevin Feist ist ausgewiesener Blockchain-Experte aus dem Raum Koblenz. Mit seiner abgeschlossenen CCFE-Zertifizierung verfügt er über fundiertes Fachwissen in der professionellen Bewertung und strategischen Nutzung digitaler Assets.
+                            <span class="desc-spacer">
+                                Er betreut gezielt High-Value-Kunden, entwickelt individuelle Lösungsansätze auf höchstem Niveau und ist maßgeblich in die Planung und Umsetzung exklusiver Events eingebunden.
+                            </span>
+                            <span class="desc-spacer">
+                                👉 Als Familienvater verbindet er unternehmerische Klarheit mit Verantwortung, Weitblick und strukturiertem Handeln.
+                            </span>
+                        </p>
+                    </div>
+
+                    <!-- 8. Florian (CEO) - Verschoben ans Ende -->
                     <div class="team-card">
                         <img src="gitarbeiter/florian.jpg" alt="Florian Merzenich" class="team-img">
                         <h4 class="team-name">Florian Merzenich</h4>
