--- a/index.html
+++ b/index.html
@@ -1437,6 +1437,7 @@
 
                     <!-- 7. Kevin -->
                     <div class="team-card">
+                        <!-- Änderung: .jpg wieder zurück zu .jpeg geändert -->
                         <img src="gitarbeiter/kevin.jpeg" alt="Kevin Feist" class="team-img">
                         <h4 class="team-name">Kevin Feist</h4>
                         <span class="team-role" style="font-size: 11px;">Blockchain-Experte & Strategic Client Advisor</span>
