--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,8 @@
             <img src="logo_weiß.png" alt="Logo" class="logo">
 
             <!-- Text Content -->
-            <h2 class="sub-headline">12 Jahre Crypto-Erfahrung zusammengefasst in 60 Min.</h2>
+            <!-- Änderung: 12 Jahre auf 9 Jahre geändert -->
+            <h2 class="sub-headline">9 Jahre Crypto-Erfahrung zusammengefasst in 60 Min.</h2>
             <h1 class="main-headline">
                 <span style="display: inline; text-decoration: line-through; text-decoration-color: #ef4444; text-decoration-thickness: 3px; opacity: 0.9;">60 Minuten Netflix</span> oder<br>
                 <span style="color: var(--primary-color); transition: color 0.5s ease;">60 Minuten für immer in seine Zukunft investieren</span>
@@ -1266,7 +1267,7 @@
         <section>
             <div class="grid-3">
                 <div class="stat-box">
-                    <span class="stat-number">12+</span>
+                    <span class="stat-number">9+</span>
                     <span class="stat-label">Jahre Erfahrung</span>
                 </div>
                 <div class="stat-box">
@@ -1317,6 +1318,11 @@
                 <div class="price-container">
                     <p class="price-label">Dein Investment heute:</p>
                     <p class="price-value">0,00 €</p>
+                </div>
+
+                <!-- ADDED CTA 1 -->
+                <div style="margin-top: 40px; text-align: center;">
+                    <a href="#" class="btn-main pulse">JETZT GRATIS 1:1 GESPRÄCH SICHERN</a>
                 </div>
             </div>
         </section>
@@ -1490,6 +1496,11 @@
                 </div>
             </div>
         </section>
+
+        <!-- ADDED CTA 2 (BOTTOM) -->
+        <div style="padding: 40px 0 60px; text-align: center;">
+             <a href="#" class="btn-main pulse">JETZT GRATIS 1:1 GESPRÄCH SICHERN</a>
+        </div>
 
         <!-- FOOTER -->
         <footer>
