--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,12 @@
             </div>
             
             <button class="nav-btn next-btn" id="slideRight"><i class="fa-solid fa-chevron-right"></i></button>
+            
+            <!-- Disclaimer Text -->
+            <div style="text-align: center; margin-top: 15px; opacity: 0.1; font-size: 8px; color: var(--text-white); font-weight: 300;">
+                Das Team besteht aus freiberuflichen Menschen sowie nicht-realen KI-Bots, die das Unternehmen Florian Merzenich aus Überzeugung unterstützen.
             </div>
+
         </section>
 
         <!-- PROFILE SECTION -->
