--- a/index.html
+++ b/index.html
@@ -357,11 +357,13 @@
                         <img src="focus.png" class="marquee-logo" alt="Focus">
                         <img src="wirtschaftswoche.png" class="marquee-logo invert" alt="WirtschaftsWoche">
                         <img src="ntv.jpg" class="marquee-logo" style="border-radius: 4px;" alt="n-tv">
+                        <img src="rtl.webp" class="marquee-logo" alt="RTL">
                         <img src="london.png" class="marquee-logo" alt="London Daily News">
                         <span class="marquee-text">Business Magazin</span>
                         <img src="focus.png" class="marquee-logo" alt="Focus">
                         <img src="wirtschaftswoche.png" class="marquee-logo invert" alt="WirtschaftsWoche">
                         <img src="ntv.jpg" class="marquee-logo" style="border-radius: 4px;" alt="n-tv">
+                        <img src="rtl.webp" class="marquee-logo" alt="RTL">
                         <img src="london.png" class="marquee-logo" alt="London Daily News">
                         <span class="marquee-text">Business Magazin</span>
                     </div>
